--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -104,15 +104,19 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('cravecount-release.keystore')
+            storePassword System.getenv("CRAVECOUNT_RELEASE_STORE_PASSWORD") ?: project.findProperty("CRAVECOUNT_RELEASE_STORE_PASSWORD")
+            keyAlias 'cravecount-key'
+            keyPassword System.getenv("CRAVECOUNT_RELEASE_KEY_PASSWORD") ?: project.findProperty("CRAVECOUNT_RELEASE_KEY_PASSWORD")
+        }
     }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             def enableShrinkResources = findProperty('android.enableShrinkResourcesInReleaseBuilds') ?: 'false'
             shrinkResources enableShrinkResources.toBoolean()
             minifyEnabled enableMinifyInReleaseBuilds
