--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^20.1.0",
+    "@react-native/metro-config": "^0.83.1",
     "@types/react": "~19.1.10",
     "typescript": "^5.3.3"
   },
